--- a/.gitignore
+++ b/.gitignore
@@ -20,5 +20,8 @@ target
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 
-# Ignore binary files
+# Ignore binaries for our test code
 hello_world
+fmt
+list
+city
